# PDF-Extract-Kit-API

./: .gitignore  Makefile  README.md  README_API.md  Untitled.ipynb  init.sh  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  README.md  build.sh  prod.Dockerfile  run.sh  run_gpu.sh
pdf_extract_kit/tasks/formula_detection/models/: yolo.py
project/pdf2markdown/configs/: pdf2markdown.yaml  pdf2markdown_chen.yaml  pdf2markdown_kasa.yaml
scripts/: clear_modelscope_cache.sh  copy_all_models.sh  download_models.py  fix_chinese_font.py  fix_layout_model.sh  fix_layout_model_project.sh
src/: download_layout_model.py  download_layout_model_alternative.py  download_models.py
src/api/: __init__.py  models.py  router_upload.py  routes.py  utils.py
tests/: README.md  conftest.py  test_api_endpoints.py  test_pdf_to_images.py  test_upload.py
